--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Flask==1.1.2
 Flask-Cors==3.0.10
 gitdb==4.0.9
 GitPython==3.1.27
+gunicorn==20.1.0
 idna==2.10
 importlib-metadata==4.11.3
 ipykernel==6.12.1
